feat: 🎸 Add side panel functionality to extension
This commit enhances the extension by adding side panel functionality:

BREAKING CHANGE: 🧨 - Added side panel support in manifest.json with appropriate permissions

✅ Closes: - Created sidepanel.html with responsive layout for vertical display

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,16 @@
   "name": "Hex-Text Converter",
   "version": "1.2",
   "description": "Chuyển đổi giữa mã hex và văn bản, hỗ trợ menu chuột phải",
-  "permissions": ["contextMenus", "scripting", "storage", "activeTab", "<all_urls>"],
+  "permissions": ["contextMenus", "scripting", "storage", "activeTab", "sidePanel"],
   "background": {
     "service_worker": "service-worker.js",
     "type": "module"
   },
   "action": {
-    "default_popup": "popup.html",
     "default_icon": "icon.png"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
   },
   "icons": {
     "16": "icon.png",
